[package]
name = "imstr"
version = "0.2.0"
edition = "2021"
description = "Cheaply clonable and slicable immutable strings"
documentation = "https://docs.rs/imstr"
repository = "https://github.com/xfbs/imstr"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
license = "MIT"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "nom-json"
required-features = ["nom"]

[[example]]
name = "peg-list"
required-features = ["peg"]

[dependencies]
nom = { version = "7.1.3", optional = true }
peg-runtime = { version = "0.8.1", optional = true }
serde = { version = "1.0.159", features = ["derive"], optional = true }

[features]
default = []
# enable serde integration (serialize and deserialize ImString)
serde = ["dep:serde"]
# enable peg integration (parse ImString)
peg = ["dep:peg-runtime"]
nom = ["dep:nom"]
std = []

[dev-dependencies]
criterion = "0.4.0"
peg = "0.8.1"
